Version 1.14.7

- added convenient function to increment achievement progress by one

Version 1.14.6

- achievements of other mods now can be queried

Version 1.13.1

- achievements now can also be unlocked when playing without Spine

Version 1.13.0

- fixed starting same frame function multiple times

Version 1.12.1

- added statistics module

Version 1.12.0

- added new message with 3 integers
- gamepad vibration time when getting damage reduced from 2 seconds to 1 second
- untrigger of earthquake gamepad vibration works now
- added Spine_IsOnline function in multiplayer module to check if player is online and logged into an account

Version 1.11.0

- fixed infinite loop when showing achievement with a name that is too long for one line

Version 1.10.3

- optimized some stuff in achievement handling

Version 1.10.2

- fixed G1 compilation error
- improved error handling in case LeGo isn't initialized with all required modules
- gamepad vibration during earthquakes (stomper in mine, maybe some magic effects) now should be able also in Gothic 1
- renamed some constants for earthquake hooks so they're named correctly
- fixed memory leak in Spine_Achievements

Version 1.10.1

- fixed crash initialising Spine without achievement module
- added new method Spine_GetTestMode() to check whether mod is currently started in developer mode or as mod from the database
- added possibility to also test achievements with progress. SPINE_ACHIEVEMENT_PROGRESS array now is mandatory to be able to compile (see Spine_UserConstants.d in case you're not using Spine Editor to create achievements)

Version 1.10.0

- added Spine_Friends.d to get all friends for a user
- added Spine_SearchMatchWithFriend to search a match with the given friend name

Version 1.7.4

- added function to stop search for a match

Version 1.7.0

- added new message with 4 integers
- added method to delete a message to not produce memory leaks
- added method to get the score for a specific username